mark as read/unread links actually mark as read or unread

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -15,9 +15,9 @@
       <% end %>
 
       <% if tyml.viewed %>
-        <%= link_to 'Mark as unread', :action => 'mark_as_read_or_unread', :method => 'put' %>
+        <%= link_to 'Mark as unread', mark_as_read_or_unread_url(tyml), :method => 'put' %>
       <% else %>
-        <%= link_to 'Mark as read', :action => 'mark_as_read_or_unread', :method => 'put' %>
+        <%= link_to 'Mark as read', mark_as_read_or_unread_url(tyml), :method => 'put' %>
       <% end %>
 
       <div class="comments-container">
