style show page, make share input text smaller

--- a/app/assets/stylesheets/_dashboard.css.sass
+++ b/app/assets/stylesheets/_dashboard.css.sass
@@ -4,6 +4,9 @@
   padding: 1em
   position: relative
   line-height: 1.4
+  -webkit-border-radius: 2px
+  -moz-border-radius: 2px
+  border-radius: 2px
 .tyml-profile-image
   width: 4em
   height: 4em
