--- a/app/assets/stylesheets/_modal.css.sass
+++ b/app/assets/stylesheets/_modal.css.sass
@@ -22,6 +22,7 @@
   input[type="text"],
   input[type="url"],
   textarea
+    font-size: 1.25em
     border: 1px solid #ccc
     max-width: 100%
   h3
