--- a/app/views/tymls/_comment.html.erb
+++ b/app/views/tymls/_comment.html.erb
@@ -1,6 +1,8 @@
-<%= form_for @comment do |f| -%>
-  <%= f.text_field :comment_text, placeholder: 'Leave a comment' %>
-  <%= f.hidden_field :user_id, :value => @current_user.id %>
-  <%= f.hidden_field :tyml_id, :value => @tyml.id %>
-  <%= f.submit %>
-<% end -%>
+<div class="comment-form">
+  <%= form_for @comment do |f| -%>
+    <%= f.text_field :comment_text, placeholder: 'Leave a comment' %>
+    <%= f.hidden_field :user_id, :value => @current_user.id %>
+    <%= f.hidden_field :tyml_id, :value => @tyml.id %>
+    <%= f.submit "Reply" %>
+  <% end -%>
+</div>
