--- a/app/views/tymls/show.html.erb
+++ b/app/views/tymls/show.html.erb
@@ -11,35 +11,41 @@
 <% end %>
 </strong></h2>
 
-<h3>
-  Don't stop now! <%= link_to 'Share more content', tymls_path %>.
-</h3>
-
 <div class="tyml-container group">
-    <% if @tyml.receiver %>
-    <div class="tyml-profile-image"><%= image_tag @tyml.receiver.profile_pic %></div>
-    <% end %>
-    <p class="tyml-user"><span class="tyml-copy">You thought</span>
+  <% unless @tyml.receiver.blank? %>
+  <div class="tyml-profile-image"><%= image_tag @tyml.receiver.profile_pic %></div>
+  <% end %>
+  <p class="tyml-user"><span class="tyml-copy">You thought</span>
 
-    <% if @tyml.receiver %>
-      <%= @tyml.receiver.name %>
-    <% else %>
-      <%= @tyml.receiver_email %>
-    <% end %>
+  <% if @tyml.receiver %>
+    <%=  @tyml.receiver.name %>
+  <% else %>
+    <%= @tyml.receiver_email %>
+  <% end %>
 
-	<span class="tyml-copy">might like&hellip;</span></p>
-    <div class="tyml-content-wrap">
-      <p class="tyml-url"><%= link_to @tyml.url, tyml_url(@tyml, :viewed => 'true', :url => @tyml.url ), :method => 'put', :target => '_blank' %></p>
-      <% unless @tyml.note.blank? %>
-        <p class="tyml-note"><%= @tyml.note %></p>
-      <% end %>
+<span class="tyml-copy">might like&hellip;</span></p>
+  <div class="tyml-content-wrap">
+    <p class="tyml-url"><%=  link_to @tyml.url, @tyml.url, :target => '_blank' %></p>
+    <% unless @tyml.note.blank? %>
+      <p class="tyml-note"><%=  @tyml.note %></p>
+    <% end %>
+    <div class="comments-container">
       <% @tyml.comments.each do |comment| %>
-        <%= comment.user.name %>
-        <%= image_tag comment.user.profile_pic, :width => "200" %>
-        <%= comment.comment_text %>
+        <div class="single-comment-wrap group">
+          <div class="comment-profile-image"><%= image_tag comment.user.profile_pic %></div>
+          <p class="comment-note">
+            <span class="user-name"><%= comment.user.name %></span> &mdash; <%= comment.comment_text %>
+          </p>
+        </div>
       <% end %>
       <%= render 'comment' %>
     </div>
   </div>
-
 </div>
+<br />
+<h3>
+  Don't stop now! <a href="#share" data-behavior="share-tyml">Share more content</a>.
+</h3>
+
+
+
