--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -2,8 +2,14 @@
   <% @current_user.received_tymls.order('created_at desc').each do |tyml| %>
     <% @tyml_comment = tyml %>
   <div class="tyml-container group">
-    <% unless tyml.viewed != true %>
-      <div class="tyml-viewed">Viewed</div>
+    <% if tyml.viewed %>
+      <div class="tyml-viewed" data-state="unread">
+        <span><%= link_to 'Mark as unread', mark_as_read_or_unread_url(tyml), :method => 'put' %></span>
+      </div>
+    <% else %>
+      <div class="tyml-viewed" data-state="read">
+        <span><%= link_to 'Mark as read', mark_as_read_or_unread_url(tyml), :method => 'put' %></span>
+      </div>
     <% end %>
     <div class="tyml-profile-image"><%= image_tag tyml.sender.profile_pic %></div>
     <p class="tyml-user"><%=  tyml.sender.name %> <span class="tyml-copy">thought you might like&hellip;</span></p>
@@ -12,12 +18,6 @@
 
       <% unless tyml.note.blank? %>
         <p class="tyml-note"><%=  tyml.note %></p>
-      <% end %>
-
-      <% if tyml.viewed %>
-        <%= link_to 'Mark as unread', mark_as_read_or_unread_url(tyml), :method => 'put' %>
-      <% else %>
-        <%= link_to 'Mark as read', mark_as_read_or_unread_url(tyml), :method => 'put' %>
       <% end %>
 
       <div class="comments-container">
