--- a/app/assets/stylesheets/_header.css.sass
+++ b/app/assets/stylesheets/_header.css.sass
@@ -27,3 +27,10 @@
       font-size: 0.75em
       a
         margin-left: 0.75em
+.nav-button
+  -webkit-border-radius: 2px
+  -moz-border-radius: 2px
+  border-radius: 2px
+  background: #124d8c
+  padding: 0.25em 0.5em
+  line-height: 1
