truncate url text

--- a/app/assets/stylesheets/_dashboard.css.sass
+++ b/app/assets/stylesheets/_dashboard.css.sass
@@ -44,6 +44,9 @@
 
 .tyml-url
   padding-top: 0.4em
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
   @include respond-to(xsmall)
     text-align: center
     clear: left
