remove reply button and update comment placeholder text

--- a/app/assets/stylesheets/_dashboard.css.sass
+++ b/app/assets/stylesheets/_dashboard.css.sass
@@ -26,6 +26,7 @@
 .tyml-user
   font-weight: 600
   padding-left: 5em
+  font-size: 1.333333333em
   span
     display: inline-block
     font-weight: 300
