--- a/app/views/users/_comment.html.erb
+++ b/app/views/users/_comment.html.erb
@@ -1,8 +1,7 @@
 <div class="comment-form">
   <%= form_for @comment do |f| -%>
-    <%= f.text_field :comment_text, placeholder: 'Leave a comment' %>
+    <%= f.text_field :comment_text, placeholder: 'Leave a comment and hit "Enter"' %>
     <%= f.hidden_field :user_id, :value => @current_user.id %>
     <%= f.hidden_field :tyml_id, :value => @tyml_comment.id %>
-    <%= f.submit "Reply" %>
   <% end -%>
 </div>
