--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,7 @@
       <%= link_to "Dashboard", dashboard_url if user_signed_in? %>
       <a href="#share" data-behavior="share-tyml">Share</a>
       <%= link_to "Sent", sent_url if user_signed_in? %>
+      <%= link_to "My Account", edit_user_url if user_signed_in? %>
       <%= (link_to "Sign-out", destroy_user_session_path, :method => 'delete') if user_signed_in? %>
     </nav>
   </div>
