update dashboard look, bring in proxima nova

--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -5,7 +5,7 @@ body
 html
   font-size: 18px
   line-height: 1.5em
-  font-family: 'open-sans', Helvetica, sans-serif
+  font-family: Helvetica, sans-serif
   font-weight: 300
   background: white
 
