--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -11,11 +11,13 @@
         <span><%= link_to 'Mark as read', mark_as_read_or_unread_url(tyml), :method => 'put' %></span>
       </div>
     <% end %>
-    <div class="tyml-profile-image"><%= image_tag tyml.sender.profile_pic %></div>
-    <p class="tyml-user"><%=  tyml.sender.name %> <span class="tyml-copy">thought you might like&hellip;</span></p>
-    <div class="tyml-content-wrap">
+    <header class="tyml-header">
+      <div class="tyml-profile-image"><%= image_tag tyml.sender.profile_pic %></div>
+      <p class="tyml-user"><%=  tyml.sender.name %> <span class="tyml-copy">thought you might like&hellip;</span></p>
       <p class="tyml-url"><%=  link_to tyml.url, tyml_url(tyml, :viewed => 'true'), :method => 'put', :target => '_blank' %></p>
+    </header>
 
+    <div class="tyml-content-wrap">
       <% unless tyml.note.blank? %>
         <p class="tyml-note"><%=  tyml.note %></p>
       <% end %>
