--- a/app/assets/stylesheets/_dashboard.css.sass
+++ b/app/assets/stylesheets/_dashboard.css.sass
@@ -63,8 +63,12 @@
 
 .tyml-note
   padding-top: 0.4em
+  time
+    font-size: .777777778em
+    color: #a2a2a2
   @include respond-to(xsmall)
     text-align: center
+
 
 .tyml-viewed
   position: absolute
