--- a/app/assets/stylesheets/_base.css.sass
+++ b/app/assets/stylesheets/_base.css.sass
@@ -7,13 +7,12 @@ html
   line-height: 1.5em
   font-family: Helvetica, sans-serif
   font-weight: 300
-  background: white
+  background: #fafafa
 
 strong
   font-weight: 400
 
 body
-  background: white
   padding-right: 1em
   padding-left: 1em
 
