TYMLs now display their timestamp in time_ago_in_words format.

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -22,7 +22,7 @@
       <% unless tyml.note.blank? %>
         <p><%=  tyml.note %></p>
       <% end %>
-        <time datetime="<%= tyml.created_at %>"><%= tyml.created_at %></time>
+        <time datetime="<%= tyml.created_at %>"><%= "#{time_ago_in_words(tyml.created_at)} ago" %></time>
       </div>
 
       <div class="comments-container">
