TYMLs can be marked as archived and unarchived. Next up, logic to hide from the receiver's view if the TYML is archived.

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -19,6 +19,7 @@
 
     <div class="tyml-content-wrap">
       <div class="tyml-note">
+        <%= link_to 'Archive', archive_url(tyml), :method => 'put' %>
       <% unless tyml.note.blank? %>
         <p><%=  tyml.note %></p>
       <% end %>
