--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -4,47 +4,8 @@
   <% unless tyml.archived == true && tyml.sender != current_user %>
 
     <% @tyml_comment = tyml %>
-  <div class="tyml-container group">
-    <% if tyml.viewed %>
-      <div class="tyml-viewed" data-state="unread">
-        <span><%= link_to 'Mark as unread', mark_as_read_or_unread_url(tyml), :method => 'put' %></span>
-      </div>
-    <% else %>
-      <div class="tyml-viewed" data-state="read">
-        <span><%= link_to 'Mark as read', mark_as_read_or_unread_url(tyml), :method => 'put' %></span>
-      </div>
-    <% end %>
-    <header class="tyml-header">
-      <div class="tyml-profile-image"><%= image_tag tyml.sender.profile_pic %></div>
-      <p class="tyml-user"><%=  tyml.sender.name %> <span class="tyml-copy">thought you might like&hellip;</span></p>
-      <p class="tyml-url"><%=  link_to tyml.url, tyml_url(tyml, :viewed => 'true'), :method => 'put', :title => tyml.url, :target => '_blank' %></p>
-    </header>
-
-    <div class="tyml-content-wrap">
-      <div class="tyml-note">
-      <% unless tyml.note.blank? %>
-        <p><%=  tyml.note %></p>
-      <% end %>
-        <time datetime="<%= tyml.created_at %>"><%= "#{time_ago_in_words(tyml.created_at)} ago" %>
-        <% unless tyml.sender == current_user %>
-         / <%= link_to 'Archive', archive_url(tyml), :method => 'put' %>
-        <% end %>
-</time>
-      </div>
-
-      <div class="comments-container">
-        <% tyml.comments.each do |comment| %>
-          <div class="single-comment-wrap group">
-            <div class="comment-profile-image"><%= image_tag comment.user.profile_pic %></div>
-            <p class="comment-note">
-              <span class="user-name"><%= comment.user.name %></span> &mdash; <%= comment.comment_text %>
-            </p>
-          </div>
-        <% end %>
-        <%= render 'comment' %>
-      </div>
-    </div>
-  </div>
+    <%= render 'tymls/tyml', :tyml => tyml %>
+ 
   <% end %>
   <% end %>
 </div>
