--- a/app/views/tyml_mailer/comment_notification.html.erb
+++ b/app/views/tyml_mailer/comment_notification.html.erb
@@ -1,1 +1,7 @@
-Testing comment notifications.
+<h2>New comment from <%= @comment.user.name %></h2>
+
+<p><%= @comment.comment_text %></p>
+
+Re: <%= link_to "#{@comment.tyml.url}", @comment.tyml.url %>
+
+Sign up for free <%= link_to 'here', new_user_registration_url %>!</strong></p>
