AJAXified comments on the dashboard page. Next up, the Sent page.

--- a/app/views/tyml_mailer/comment_notification.html.erb
+++ b/app/views/tyml_mailer/comment_notification.html.erb
@@ -2,6 +2,6 @@
 
 <p><%= @comment.comment_text %></p>
 
-Re: <%= link_to "#{@comment.tyml.url}", @comment.tyml.url %>
+<p>Re: <%= link_to "#{@comment.tyml.url}", @comment.tyml.url %></p>
 
 Sign up for free <%= link_to 'here', new_user_registration_url %>!</strong></p>
