--- a/app/views/tymls/_comment.html.erb
+++ b/app/views/tymls/_comment.html.erb
@@ -1,7 +1,6 @@
-<div class="comment-form">
-  <%= form_for @comment do |f| -%>
-    <%= f.text_field :comment_text, placeholder: 'Leave a comment and press "Enter"' %>
-    <%= f.hidden_field :user_id, :value => @current_user.id %>
-    <%= f.hidden_field :tyml_id, :value => @tyml_comment.id %>
-  <% end -%>
+<div class="single-comment-wrap group">
+  <div class="comment-profile-image"><%= image_tag comment.user.profile_pic %></div>
+  <p class="comment-note">
+    <span class="user-name"><%= comment.user.name %></span> &mdash; <%= comment.comment_text %>
+  </p>
 </div>
