--- a/app/views/tymls/_tyml.html.erb
+++ b/app/views/tymls/_tyml.html.erb
@@ -29,15 +29,14 @@
     </div>
 
     <div class="comments-container">
-      <% tyml.comments.each do |comment| %>
-        <div class="single-comment-wrap group">
-          <div class="comment-profile-image"><%= image_tag comment.user.profile_pic %></div>
-          <p class="comment-note">
-            <span class="user-name"><%= comment.user.name %></span> &mdash; <%= comment.comment_text %>
-          </p>
+      <div id="tyml_comments_<%= tyml.id %>">
+  <% tyml.comments.each do |comment| %>
+
+    <%= render 'tymls/comment', :comment => comment %>
+
+          <% end %>
         </div>
-      <% end %>
-        <%= render 'comment' %>
+        <%= render 'comment_form' %>
       </div>
     </div>
   </div>
