Changed to non-clashing (temporary) colors for navigation.

--- a/app/assets/stylesheets/_dashboard.css.sass
+++ b/app/assets/stylesheets/_dashboard.css.sass
@@ -13,6 +13,9 @@
     margin-top: 3em
   box-shadow: 0 0 7px rgba(black, 0.15)
 
+.tyml-container a
+  color: #3f9aff
+
 .tyml-header
 
 .tyml-profile-image
