--- a/app/assets/stylesheets/_header.css.sass
+++ b/app/assets/stylesheets/_header.css.sass
@@ -1,5 +1,5 @@
 .header
-  color: white
+  color: #3f9aff
   margin-bottom: 1em
   .logo
     float: left
@@ -7,8 +7,8 @@
     font-weight: 800
     font-size: 2em
     text-align: center
-    color: white
-    text-shadow: 0 2px 3px rgba(46, 48, 146, 0.4)
+    color: #3f9aff
+    // text-shadow: 0 2px 3px rgba(46, 48, 146, 0.4)
     text-decoration: none
     &:hover
       text-decoration: none
@@ -16,7 +16,7 @@
     text-align: right
     margin: 1em auto
     a
-      color: white
+      color: #3f9aff
       text-decoration: none
       margin-left: 1em
       &:hover
