update link colors, modal bg color, profile image circles, and xsmall responsive layout

--- a/app/assets/stylesheets/_sign-in.css.sass
+++ b/app/assets/stylesheets/_sign-in.css.sass
@@ -3,7 +3,7 @@
   font-weight: 800
   font-size: 7em
   text-align: center
-  color: white
+  color: $text_color
   text-shadow: 0 2px 3px rgba(46, 48, 146, 0.4)
   @include respond-to(small)
     font-size: 4em
@@ -11,14 +11,14 @@
 .logo-send
   a
     text-decoration: none
-    color: white
+    color: $text_color
 
 .forgot-password
-  color: white
+  color: $text_color
   text-align: center
   margin-top: 1em
   a
-    color: white
+    color: $text_color
     text-decoration: none
     &:hover
       text-decoration: underline
