--- a/app/assets/stylesheets/_dashboard.css.sass
+++ b/app/assets/stylesheets/_dashboard.css.sass
@@ -11,7 +11,11 @@
   font-weight: normal
   + .tyml-container
     margin-top: 3em
+  -webkit-box-shadow: 0 0 7px rgba(black, 0.15)
+  -moz-box-shadow: 0 0 7px rgba(black, 0.15)
   box-shadow: 0 0 7px rgba(black, 0.15)
+  @include respond-to(xsmall)
+    margin: 1em 5%
 
 .tyml-container a
   color: #3f9aff
@@ -19,22 +23,23 @@
 .tyml-header
 
 .tyml-profile-image
+  overflow: hidden
   width: 3.333333333em
   height: 3.333333333em
   margin: 0.5em 0 0 -4.444444444em
   position: absolute
   left: 0
   top: 0
+  border: 3px solid white
+  -webkit-border-radius: 50%
+  -moz-border-radius: 50%
+  border-radius: 50%
+  text-align: center
   img
     width: 100%
     height: auto
-    border: 3px solid white
-    -webkit-border-radius: 50%
-    -moz-border-radius: 50%
-    border-radius: 50%
   @include respond-to(xsmall)
-    width: 5em
-    height: 5em
+    position: relative
     margin: 0 auto 0.5em auto
     float: none
 .tyml-user
