--- a/app/assets/stylesheets/_modal.css.sass
+++ b/app/assets/stylesheets/_modal.css.sass
@@ -2,12 +2,13 @@
   display: none
   position: fixed
   overflow: scroll
+  -webkit-overflow-scrolling: touch
   left: 0
   top: 0
   width: 100%
   height: 100%
   padding: 1em
-  background: rgba(#1b75bb,0.925)
+  background: rgba($text_color,0.925)
   text-align: center
 .share-container
   margin-top: 4em
