TYMLs you have archived will not show in either the sent or dashboard views.

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <% @current_user.received_tymls.order('created_at desc').each do |tyml| %>
 
-    <% unless tyml.archived == true && tyml.sender != current_user %>
+    <% unless tyml.archived == true %>
 
     <% @tyml_comment = tyml %>
 
